--- a/app/src/main/res/layout/activity_forum.xml
+++ b/app/src/main/res/layout/activity_forum.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.tanyadong.testapp2.RegisterActivity">
+    tools:context="com.tanyadong.testapp2.ForumActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -18,10 +18,26 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/addForum"
+                android:textSize="40dp"
+                android:background="@null"
+                android:layout_gravity="right"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:textColor="#FFFFFF"
+                android:text="+"
+                android:focusableInTouchMode="true"
+                android:onClick="onAddForumClick" />
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_register" />
+    <include layout="@layout/content_forum" />
 
 </android.support.design.widget.CoordinatorLayout>
